--- a/css/style copy.css
+++ b/css/style copy.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 
-
 /*EMERGENCIAS*/
 h1 {
     color: white;
@@ -15,7 +14,6 @@ h1 {
 .colorFondo {
     background-color: navy;
 }
-
 /*MENU HAMBURGUESA*/
 :root {
     --color_primario: navy;
@@ -25,33 +23,26 @@ h1 {
     --padding_left_right: 2rem;
     --ancho_maximo: 1200px;
 }
-
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
-body {
-    background-color: rgb(227, 227, 227);
+body{
+    background-color: #b2b2b2;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 10px;
 }
-
-a {
+a{
     text-decoration: none;
 }
-
-ol,
-ul {
+ol,ul{
     list-style: none;
 }
-
 .header {
     height: var(--altura_header);
     background-color: var(--color_primario);
 }
-
 .navbar {
     height: 100%;
     display: flex;
@@ -62,24 +53,19 @@ ul {
     flex-wrap: wrap;
     padding: 0 var(--padding_left_right);
 }
-
-.menu_hamburguesa {
+.menu_hamburguesa{
     display: none;
 }
-
-.menu_hamburguesa:checked+.ul_links {
+.menu_hamburguesa:checked + .ul_links {
     height: calc(100vh - var(--altura_header));
 }
-
 .logo {
     color: var(--color_blanco);
 }
-
 .list_icon {
     color: var(--color_blanco);
     cursor: pointer;
 }
-
 .ul_links {
     width: 100%;
     background-color: var(--color_primario_suave);
@@ -96,12 +82,12 @@ ul {
 
     transition: all .3s;
 }
-
 .link {
     font-size: 3em;
     color: var(--color_blanco);
     font-weight: bold;
 }
+
 
 h1.textcenter {
     text-align: center;
@@ -115,7 +101,6 @@ p {
     width: 100%;
     height: 500px;
 }
-
 /*MENU HAMBURGUESA*/
 
 h2 {
@@ -152,7 +137,6 @@ h6 {
     font-size: 22px;
 }
 
-/*
 .grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
@@ -175,46 +159,41 @@ h6 {
     height: auto;
     display: block;
 }
-*/
 
-@media (min-width:768px) {
+@media (min-width:768px){
     .labe_hamburguesa {
         display: none;
     }
-
-    .ul_links {
+    .ul_links{
         position: static;
         width: auto;
         height: auto;
         flex-direction: row;
         gap: 2rem;
     }
-
-    .link {
+    .link{
         font-size: 1.3rem;
         transition: all .3s;
         padding: .2rem .7rem;
     }
-
-    .link:hover {
+    .link:hover{
         background-color: rgb(32, 32, 220);
     }
 }
 
 
 .footercontenedor {
-    display: inline-block;
+    display:inline-block;
     flex-direction: column;
 }
 
 .imagen {
     max-width: 50%;
     height: 20%;
-
+    
 }
-
 .logo-container {
-    position: fixed;
+    position: fixed ;
     bottom: 10px;
     right: 10px;
     z-index: 1000;
@@ -225,76 +204,3 @@ h6 {
     height: 80px;
 }
 
-
-/*ANIMACION*/
-
-.grid {
-    max-width: 1200px;
-    width: 95%;
-}
-
-.slider .imagen-list {
-    display: grid;
-    gap: 18px;
-    font-size: 0;
-    margin-bottom: 30px;
-    overflow-x: auto;
-    scrollbar-width: none;
-    grid-template-columns: repeat(10, 1fr);
-}
-
-.slider .imagen-list::-webkit-scrollbar {
-    display: none;
-}
-
-.slider .imagen-list .imagen-item {
-    width: 325px;
-    height: 400px;
-    object-fit: cover;
-}
-
-.container .slider-scrollbar {
-    height: 2px;
-    width: 100%;
-    background: navy;
-    display: flex;
-    align-items: center;
-
-}
-
-.slider-scrollbar .scrollbar-track {
-    height: 2px;
-    width: 100%;
-    background: #ccc;
-    position: relative;
-    border-radius: 4px;
-}
-
-.slider-scrollbar:hover .scrollbar-track {
-    height: 4px;
-}
-
-.slider-scrollbar:hover .scrollbar-track:active {
-cursor: grabbing;
-height: 8px;
-top: -2px;
-}
-
-.slider-scrollbar .scrollbar-thumb {
-    position: absolute;
-    height: 100%;
-    width: 50%;
-    background: black;
-    border-radius: inherit;
-    cursor: grab;
-}
-
-.slider-scrollbar .scrollbar-thumb::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: -10px;
-    bottom: -10px;
-
-}
