--- a/css/style copy.css
+++ b/css/style copy.css
@@ -1,48 +1,77 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 
-/*EMERGENCIAS*/
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/*URGENCIAS TELEFONO*/
 h1 {
     color: white;
     font-family: "Nunito Sans", sans-serif;
     font-size: 22px;
 
-    padding: 20px;
-    margin-top: 30px;
-    border: 3px solid cadetblue;
+    width: 100%;
+    text-align: center;
+    color: #fff;
+    margin: 0 0 10px 0;
+    font-size: 20px;
+
 }
 
+.image-banner {
+    width: 75vw;
+    max-width: 1000px;
+    min-width: 320px;
+    margin: auto;
+}
+
+.img{
+    width: 100%;
+    border-radius: 15px;
+    box-shadow: 0px 3px 5px rgba(15, 15, 15, .5);
+}
 .colorFondo {
     background-color: navy;
 }
+
+.telefonosutiles{
+    text-align: center;
+}
+
 /*MENU HAMBURGUESA*/
 :root {
-    --color_primario: navy;
-    --color_primario_suave: navy;
-    --color_blanco: #fff;
+    --color_primario: white;
+    --color_primario_suave: white;
+    --color_blanco: navy;
     --altura_header: 80px;
     --padding_left_right: 2rem;
     --ancho_maximo: 1200px;
 }
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body{
-    background-color: #b2b2b2;
+
+
+
+body {
+    background-color: rgba(255, 247, 247, 0.676);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 10px;
 }
-a{
+
+a {
     text-decoration: none;
 }
-ol,ul{
+
+ol,
+ul {
     list-style: none;
 }
+
 .header {
     height: var(--altura_header);
     background-color: var(--color_primario);
 }
+
 .navbar {
     height: 100%;
     display: flex;
@@ -53,19 +82,24 @@ ol,ul{
     flex-wrap: wrap;
     padding: 0 var(--padding_left_right);
 }
-.menu_hamburguesa{
+
+.menu_hamburguesa {
     display: none;
 }
-.menu_hamburguesa:checked + .ul_links {
+
+.menu_hamburguesa:checked+.ul_links {
     height: calc(100vh - var(--altura_header));
 }
+
 .logo {
     color: var(--color_blanco);
 }
+
 .list_icon {
     color: var(--color_blanco);
     cursor: pointer;
 }
+
 .ul_links {
     width: 100%;
     background-color: var(--color_primario_suave);
@@ -82,25 +116,41 @@ ol,ul{
 
     transition: all .3s;
 }
+
 .link {
     font-size: 3em;
     color: var(--color_blanco);
     font-weight: bold;
 }
 
-
 h1.textcenter {
     text-align: center;
 }
 
 p {
-    font-size: 1.5rem;
+    color: rgb(0, 0, 0);
+    font-size: 1.2rem;
+    margin-top: 0;
+    margin-bottom: 2rem;
+    font-family: 'Open Sans', sans-serif;
 }
 
-.image-banner {
-    width: 100%;
-    height: 500px;
+.block {
+    background-color: navy;
+    width: auto;
+    height: auto;
+    border-radius: 7px;
+    box-shadow: 5px 5px 10px;
+
 }
+
+
+.image-banner {
+    margin: 0 0 20px 0;
+    width: 100%;
+    height: 250px;
+}
+
 /*MENU HAMBURGUESA*/
 
 h2 {
@@ -115,28 +165,30 @@ h2 {
 
 h3 {
     color: whitesmoke;
-    font-family: "Nunito Sans", sans-serif;
+    font-weight: bolder;
+    font-family: "open sans", sans-serif;
     font-size: 22px;
 }
 
 h4 {
     color: whitesmoke;
-    font-family: "Nunito Sans", sans-serif;
+    font-family: "open sans", sans-serif;
     font-size: 22px;
 }
 
 h5 {
     color: whitesmoke;
-    font-family: "Nunito Sans", sans-serif;
+    font-family: "open sans", sans-serif;
     font-size: 22px;
 }
 
 h6 {
     color: black;
-    font-family: "Nunito Sans", sans-serif;
+    font-family: "open sans", sans-serif;
     font-size: 22px;
 }
 
+/*
 .grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
@@ -159,41 +211,51 @@ h6 {
     height: auto;
     display: block;
 }
+*/
 
-@media (min-width:768px){
+@media (min-width:768px) {
     .labe_hamburguesa {
         display: none;
     }
-    .ul_links{
+
+    .ul_links {
         position: static;
         width: auto;
         height: auto;
         flex-direction: row;
         gap: 2rem;
     }
-    .link{
+
+    .link {
         font-size: 1.3rem;
-        transition: all .3s;
+        transition: all .4s;
         padding: .2rem .7rem;
     }
-    .link:hover{
-        background-color: rgb(32, 32, 220);
+
+    .link:hover {
+        background-color: rgb(231, 231, 231);
+        border-radius: 15px;
+
     }
 }
 
 
 .footercontenedor {
-    display:inline-block;
+    margin: 0 0 20px 0;
+    padding: 5px 0 5px 10px;
+    border-left: 5px solid navy;
+    display: inline-block;
     flex-direction: column;
 }
 
 .imagen {
     max-width: 50%;
     height: 20%;
-    
+
 }
+
 .logo-container {
-    position: fixed ;
+    position: fixed;
     bottom: 10px;
     right: 10px;
     z-index: 1000;
@@ -204,3 +266,76 @@ h6 {
     height: 80px;
 }
 
+
+/*ANIMACION*/
+
+.grid {
+    max-width: 1200px;
+    width: 95%;
+}
+
+.slider .imagen-list {
+    display: grid;
+    gap: 18px;
+    font-size: 0;
+    margin-bottom: 30px;
+    overflow-x: auto;
+    scrollbar-width: none;
+    grid-template-columns: repeat(10, 1fr);
+}
+
+.slider .imagen-list::-webkit-scrollbar {
+    display: none;
+}
+
+.slider .imagen-list .imagen-item {
+    width: 325px;
+    height: 400px;
+    object-fit: cover;
+}
+
+.container .slider-scrollbar {
+    height: 2px;
+    width: 100%;
+    background: navy;
+    display: flex;
+    align-items: center;
+
+}
+
+.slider-scrollbar .scrollbar-track {
+    height: 2px;
+    width: 100%;
+    background: #ccc;
+    position: relative;
+    border-radius: 4px;
+}
+
+.slider-scrollbar:hover .scrollbar-track {
+    height: 4px;
+}
+
+.slider-scrollbar:hover .scrollbar-track:active {
+    cursor: grabbing;
+    height: 8px;
+    top: -2px;
+}
+
+.slider-scrollbar .scrollbar-thumb {
+    position: absolute;
+    height: 100%;
+    width: 50%;
+    background: black;
+    border-radius: inherit;
+    cursor: grab;
+}
+
+.slider-scrollbar .scrollbar-thumb::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: -10px;
+    bottom: -10px;
+
+}
