--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,3 +1,205 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
+h1 h2 {
+  font-family: "Nunito Sans", sans-serif;
+}
+
+h3 h4 h5 h6 {
+  font-family: "open sans", sans-serif;
+}
+
+:root {
+  --color_primario: white;
+  --color_primario_suave: white;
+  --color_blanco: navy;
+  --altura_header: 80px;
+  --padding_left_right: 2rem;
+  --ancho_maximo: 1200px;
+}
+
+body {
+  background-color: rgba(255, 247, 247, 0.676);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 10px;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
+a {
+  text-decoration: none;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+.header {
+  height: var(--altura_header);
+  background-color: var(--color_primario);
+}
+
+.navbar {
+  height: 100%;
+  display: flex;
+  width: min(1200px, 100%);
+  margin: 0 auto;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 0 var(--padding_left_right);
+}
+
+.menu_hamburguesa {
+  display: none;
+}
+
+.menu_hamburguesa:checked + .ul_links {
+  height: calc(100vh - var(--altura_header));
+}
+
+.logo {
+  color: var(--color_blanco);
+}
+
+.list_icon {
+  color: var(--color_blanco);
+  cursor: pointer;
+}
+
+.ul_links {
+  width: 100%;
+  background-color: var(--color_primario_suave);
+  position: absolute;
+  top: var(--altura_header);
+  left: 0;
+  height: 0;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+  transition: all 0.3s;
+}
+
+.link {
+  font-size: 3em;
+  color: var(--color_blanco);
+  font-weight: bold;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  background-color: navy;
+}
+
+.colorFondo {
+  background-color: navy;
+}
+
+.header {
+  height: var(80px);
+  background-color: var(white);
+}
+
+.navbar {
+  height: 100%;
+  display: flex;
+  width: min(1200px, 100%);
+  margin: 0 auto;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 0 var(2rem);
+}
+
+.menu_hamburguesa {
+  display: none;
+}
+
+.menu_hamburguesa:checked + .ul_links {
+  height: calc(100vh - var(80px));
+}
+
+.logo {
+  color: var(navy);
+}
+
+.list_icon {
+  color: var(navy);
+  cursor: pointer;
+}
+
+.ul_links {
+  width: 100%;
+  background-color: var(white);
+  position: absolute;
+  top: var(80px);
+  left: 0;
+  height: 0;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+  transition: all 0.3s;
+}
+
+.link {
+  font-size: 3em;
+  color: var(navy);
+  font-weight: bold;
+}
+
+h1.textcenter {
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  .labe_hamburguesa {
+    display: none;
+  }
+  .ul_links {
+    position: static;
+    width: auto;
+    height: auto;
+    flex-direction: row;
+    gap: 2rem;
+  }
+  .link {
+    font-size: 1.3rem;
+    transition: all 0.4s;
+    padding: 0.2rem 0.7rem;
+  }
+  .link:hover {
+    background-color: rgb(231, 231, 231);
+    border-radius: 15px;
+  }
+}
+.footercontenedor {
+  margin: 0 0 20px 0;
+  padding: 5px 0 5px 10px;
+  border-left: 5px solid navy;
+  display: inline-block;
+  flex-direction: column;
+}
+
+.logo-container {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  z-index: 1000;
+}
 
 /*# sourceMappingURL=estilos.css.map */
