--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,6 +1,6 @@
-$font: 'Nunito Sans', sans-serif;
-$primary-color: navy;
-$second-color: rgb(0, 176, 117);
-$header-height: 80px;
-$max-width: 1200px;
-$padding-sides: 2rem;
+$color_primario: white;
+$color_primario_suave: white;
+$color_blanco: navy;
+$altura_header: 80px;
+$padding_left_right: 2rem;
+$ancho_maximo: 1200px;
